Changelog for Miosix np embedded OS

- File abstraction layer: added testsuite test for directory listing.
  Also removed two tests from the testsuite related to the old Filesystem
  and Directory classes.
- File abstraction layer: implemented fcntl() and getdents().
- File abstraction layer: improved path resolution with support for opening
  directories. Now the substring of the resolved path starting with off
  does not contain a leading /
- Added IntrusiveRefCountedEnableSharedFromThis.
- File abstraction layer: added FilesystemManager::umountAll()
- Fixed support for compiling kernel without WITH_FILESYSTEM and added
  WITH_DEVFS config option to fine-tune code size for a given application.
- File abstraction layer: Finished implementing DevFs with working
  StatelessDeviceFile, and DeviceFileGenerator for stateful files.
  Added MEssageFileGenerator to support /proc/cpuinfo-like stateful
  files.
- File abstraction layer: Moved console support out of DevFs, will allow
  better code size reduction if DevFs is not needed
- File abstraction layer: Addded support for stateless and stateful
  device files, added DeviceFileGenerator to support stateful devices.
- File abstraction layer: TerminalDevice is now instantiated in the FDT
- File abstraction layer: Merged NullFile and NullConsoleDevice classes.
- File abstraction layer: DeviceFile now implements a default version of
  lseek and fstat, to factorize common code from individual device files.
- File abstraction layer: added class DeviceFile from which all files meant
  to be attached to a DevFs should derive. Contains the code to assign an
  unique inode to each of them.
- File abstraction layer: added FilesystemManager::getFilesystemId() to
  have a different st_dev field when stat-ing files from different filesystems.
- File abstraction layer: added stringpart.cpp/.h and devfs/base_files.cpp/.h
  to better modularize code in files. file.h now contains only FileBase and
  FilesystemBase.