@@ -264,6 +264,21 @@ public:
      * \return 0 on success, or a negative number on failure
      */
     virtual int lstat(StringPart& name, struct stat *pstat);
+    
+    /**
+     * Remove a file or directory
+     * \param name path name of file or directory to remove
+     * \return 0 on success, or a negative number on failure
+     */
+    virtual int unlink(StringPart& name);
+    
+    /**
+     * Rename a file or directory
+     * \param oldName old file name
+     * \param newName new file name
+     * \return 0 on success, or a negative number on failure
+     */
+    virtual int rename(StringPart& oldName, StringPart& newName);
      
     /**
      * Create a directory
